# Robotic_arm_ws

./: README.md
src/robotic_arms_ROS2/kuka_arm_interfaces/: CMakeLists.txt  package.xml
src/robotic_arms_ROS2/kuka_arm_interfaces/action/: Gripper.action  PickAndPlace.action  Robot.action
src/robotic_arms_ROS2/kuka_arm_interfaces/include/kuka_arm_interfaces/: moveit_pose_client.hpp
src/robotic_arms_ROS2/kuka_arm_interfaces/srv/: plan_request.hpp
src/robotic_arms_ROS2/kuka_arm_moveit/: CMakeLists.txt
src/robotic_arms_ROS2/kuka_arm_moveit/config/: kr210_arm.ros2_control.xacro
src/robotic_arms_ROS2/kuka_arm_pkg/: CMakeLists.txt
src/robotic_arms_ROS2/kuka_arm_pkg/launch/: 1_rviz_kuka_arm.launch.py  2_gazebo_kuka_arm.launch.py  3_moveit_kuka_arm.launch.py  4_moveit_node_controlling.launch.py
src/robotic_arms_ROS2/kuka_arm_pkg/src/: gripper_controller.cpp  motion_drive_moveit.cpp
